<resources>
    <string name="app_name">YES</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="weight">Weight</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="dates">Dates</string>
    <string name="wallet">Wallet</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="height">Height</string>
    <string name="hair_color">Hair color</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="delete">Delete</string>
    <string name="min_amount">Min amount</string>
    <string name="available_time">Available time</string>
    <string name="filters">Filters</string>
    <string name="only_with_photo">Only with photo</string>
    <string name="enable_push">Enable push</string>
    <string name="pending">Pending</string>
    <string name="scheduled">Scheduled</string>
    <string name="balance">Balance</string>
    <string name="available">Available</string>
    <string name="blocked">Blocked</string>
    <string name="withdraw">Withdraw</string>
    <string name="statements">Statements</string>
    <string name="apply">Apply</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="done">Done</string>
    <string name="about_me">About me</string>
    <string name="birth_date">Birth date</string>
    <string name="girl">Girl</string>
    <string name="location">Location</string>
    <string name="presents">Presents</string>
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
    <string name="where">Where</string>
    <string name="age_begin" />
    <string name="deposit">Deposit</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="email_invalid">Value email is invalid</string>
    <string name="short_password">Short password</string>
    <string name="chat">Chat</string>
    <string name="send">SEND</string>
    <string name="in_map">In map</string>
    <string name="repeat_password">Repeat password</string>
    <string name="please_register">Please Register</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="add_date">Add Date</string>
    <string name="all_information_is_optional">All information is optional</string>
    <string name="edit_profile">Edit profile</string>
    <string name="features">Features</string>
    <string name="time">Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="preview">Preview</string>
    <string name="intro_text_about_present_amount">Intro text about present amount.</string>
    <string name="wrong_data">Wrong entry data. Please correct!</string>
    <string name="request_error">Request error!</string>
    <string name="reg_succ">Registration completed successfully</string>
    <string name="publish">Publish</string>
    <string name="choose_a_meeting_place">Choose a meeting place</string>
    <string name="wrong_date">Wrong date! Please correct.</string>
    <string name="entry_time">Entry time!</string>
    <string name="entry_place">Check place!</string>
    <string name="entry_present">Entry present!</string>
    <string name="error_add_date">Error</string>
    <string name="something_wrong">Something wrong</string>
    <string name="date_created_successfully">Date created successfully!</string>
    <string name="please_login">Please Login</string>
    <string name="permission_not_found">Permission not found</string>
    <string name="loading_photo">Loading photo</string>
    <string name="forgot_pincode">Forgot pincode</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="i_m_looking_for">I\'m Looking For</string>
    <string name="when">When</string>
    <string name="change">Change</string>
    <string name="etc">Etc</string>
    <string name="invalid_email">Email is invalid!</string>
    <string name="empty_data">Empty data!</string>
    <string name="passwords_is_not_equals">Passwords is not equals!</string>
    <string name="present_more_zero">Present must be greater than zero</string>
    <string name="settings">Settings</string>
    <string name="push_up">Push Up</string>
    <string name="mail_notification">Mail Notification</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="change_password">Change password</string>
    <string name="change_pin_code">Change Pin Code</string>
    <string name="tell_friends">Tell Friends</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="cash_in">Cash In</string>
    <string name="cash_out">Cash Out</string>
    <string name="last_operation">Last Operation</string>
    <string name="freeze">Freeze</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_photo">Delete photo</string>
    <string name="dates_loading">Dates loading</string>
    <string name="confirmed">Confirmed</string>
    <string name="view_details">View details</string>
    <string name="loading_info">Loading info</string>
    <string name="add_to_date_success">You were added to the meeting successfully</string>
    <string name="wrong_gender">Wrong gender!</string>
    <string name="pending_women">Pending women</string>
    <string name="women_loading">Women loading</string>
    <string name="select_woman">Select woman</string>
    <string name="you_select_woman">You select woman!</string>
    <string name="update_success">The update was successful</string>
    <string name="data_updating">Data updating</string>
    <string name="ask_del_photo">Do you want to delete photo?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sign_registration">@string/sign_up</string>
    <string name="sign_authorization">@string/sign_in</string>
    <string name="sign_registration_description">@string/please_register</string>
    <string name="sign_authorization_description">@string/please_login</string>
    <string name="sign_email">@string/email</string>
    <string name="sign_password">@string/password</string>
    <string name="sign_forgot_password">@string/forgot_password</string>
    <string name="pin_forgot_pincode">@string/forgot_pincode</string>
    <string name="pin_enter_pin">@string/enter_pin</string>
    <string name="pin_confirm_pin">@string/confirm_pin</string>
    <string name="pin_incorrect_pin">@string/incorrect_pin</string>
    <string name="bottom_menu_action_profile">@string/profile</string>
    <string name="bottom_menu_action_dates">@string/dates</string>
    <string name="bottom_menu_action_wallet">@string/wallet</string>
    <string name="bottom_menu_action_settings">@string/settings</string>
    <string name="profile_title">@string/profile</string>
    <string name="profile_main_btn_title_man">@string/add_date</string>
    <string name="profile_main_btn_title_woman">@string/search</string>
    <string name="profile_age">@string/age</string>
    <string name="profile_height">@string/height</string>
    <string name="profile_weight">@string/weight</string>
    <string name="profile_edit_cancel_upload_photo">@string/photo_upload_canceled</string>
    <string name="dates_title">@string/dates</string>
    <string name="dates_pending">@string/pending</string>
    <string name="dates_scheduled">@string/scheduled</string>
    <string name="wallet_title">@string/wallet</string>
    <string name="wallet_balance">@string/balance</string>
    <string name="wallet_freeze">@string/freeze</string>
    <string name="wallet_in">@string/cash_in</string>
    <string name="wallet_out">@string/cash_out</string>
    <string name="wallet_last_operation">@string/last_operation</string>
    <string name="settings_push_up">@string/push_up</string>
    <string name="settings_mail_notification">@string/mail_notification</string>
    <string name="settings_mail">@string/mail</string>
    <string name="settings_phone">@string/phone</string>
    <string name="settings_change_password">@string/change_password</string>
    <string name="settings_change_pin_code">@string/change_pin_code</string>
    <string name="settings_tell_friends">@string/tell_friends</string>
    <string name="settings_feedback">@string/feedback</string>
    <string name="settings_about">@string/about</string>
    <string name="settings_delete_profile">@string/delete_profile</string>
    <string name="settings_sign_out">@string/sign_out</string>
    <string name="update_info">Update info</string>
    <string name="add_date_title">@string/add_date</string>
    <string name="add_date_girl_params">@string/i_m_looking_for</string>
    <string name="add_date_age">@string/age</string>
    <string name="add_date_height">@string/height</string>
    <string name="add_date_weight">@string/weight</string>
    <string name="add_date_hair_color">@string/hair_color</string>
    <string name="add_date_etc">@string/etc</string>
    <string name="add_date_time">@string/when</string>
    <string name="add_date_start_time">@string/start_time</string>
    <string name="add_date_end_time">@string/end_time</string>
    <string name="add_date_place">@string/where</string>
    <string name="add_date_choose_place">@string/choose_a_meeting_place</string>
    <string name="add_date_presents">@string/presents</string>
    <string name="add_date_description">@string/intro_text_about_present_amount</string>
    <string name="add_date_preview">@string/preview</string>
    <string name="show_date_age">@string/age</string>
    <string name="show_date_height">@string/height</string>
    <string name="show_date_weight">@string/weight</string>
    <string name="show_date_woman_age">@string/age</string>
    <string name="show_date_woman_height">@string/height</string>
    <string name="show_date_woman_weight">@string/weight</string>
    <string name="show_date_hair_color">@string/hair_color</string>
    <string name="show_date_start_time">@string/start_time</string>
    <string name="show_date_end_time">@string/end_time</string>
    <string name="show_date_presents">@string/presents</string>
    <string name="permissions_location_miss">You do not have permissions to determine your location!</string>
    <string name="permissions_file_miss">You do not have permission to access the file system!</string>
    <string name="photo_upload_canceled">Photo upload canceled</string>
    <string-array name="hair_colors">
        <item>Doesn\'t matter</item>
        <item>Blondie</item>
        <item>Brunette</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>