<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_registration_description"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <com.elatesoftware.meetings.ui.view.CustomEditText
            android:id="@+id/cet_up_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:hint="@string/sign_email"/>

        <com.elatesoftware.meetings.ui.view.CustomEditText
            android:id="@+id/cet_up_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:hint="@string/sign_password"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/sign_authorization"
                android:textColor="@color/white" />
        </FrameLayout>

        <!--<com.elatesoftware.meetings.ui.view.CustomEditText
            android:id="@+id/cet_rep_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:hint="@string/repeat_password"/>-->
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.dd.CircularProgressButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cpb_textIdle="@string/sign_registration"
            app:cpb_selectorIdle="@drawable/button_blue_bg"
            app:cpb_cornerRadius="5dp"/>

    </LinearLayout>
</RelativeLayout>